LIN-3406/LIN-3524 :: Use standard refleciton API as fallback
- Use reflection API as fallback in accessors
- Move accessors to linkki-utils
- Make internal accessor classes package private

Change-Id: I5ce7f76a655de5137bc292b3fe9700c9a76e4949